--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@ i<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org
   <version>0.0.1-SNAPSHOT</version>
   <name>TestDemo1 Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.8.1</version>
+</dependency>
   <build>
     <finalName>TestDemo</finalName>
   </build>
