--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,11 @@
         </plugin>
     </plugins>
   </build>
+  <dependencies>
+  <dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.8.1</version>
+</dependency>
+    </dependencies>
 </project>
