--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,9 @@
   <build>
     <finalName>TestDemo</finalName>
   </build>
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+</properties>
 </project>
 
